...
                        }
                        
                    }
                }
                
                
                .navigationTitle("Book Vault")
                //Create and Edit Button
                .toolbar{
                    ToolbarItem(placement: .navigationBarTrailing){
                        Button{
                            showingAddScreen.toggle()
                        } label: {
...
                }
                .toolbar{
                    ToolbarItem(placement: .bottomBar) {
                        Button(action: {
                            isShowingView.toggle()
                        }, label: {
                            Label("Edit Book", systemImage: "pencil")
                        })
                    }
                }
            }
                .searchable(text:$searchConfig.query)
                .onChange(of: searchConfig) { newValue in
...
